test/failing/failing_array.c
int arr[5][2] = 1, 'c', 3.6, "dsasd", 5};

int out_of_bounds = arr[5];